--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lodash": "^4.17.11",
     "minimist": "^1.2.0",
     "swagger-parser": "^8.0.0",
+    "node-watch": "^0.6.0",
     "traverse": "^0.6.6",
     "url-join": "^4.0.0"
   },
