--- a/package.json
+++ b/package.json
@@ -49,7 +49,16 @@
     "swagger-parser": "^8.0.0",
     "node-watch": "^0.6.0",
     "traverse": "^0.6.6",
-    "url-join": "^4.0.0"
+    "url-join": "^4.0.0",
+    "commander": "^2.9.0",
+    "express": "^4.15.3",
+    "glob": "^7.1.3",
+    "js-yaml": "^3.13.0",
+    "json-refs": "^3.0.12",
+    "opn": "5.3.0",
+    "path": "^0.12.7",
+    "socket.io": "^2.0.3",
+    "swagger-editor-dist": "3.6.26"
   },
   "devDependencies": {
     "@maxdome/prettier": "^1.3.3",
@@ -57,12 +66,12 @@
     "chai-http": "^4.3.0",
     "chai-somewhere": "^1.0.2",
     "express": "^4.17.1",
-    "mocha": "^6.1.4",
-    "mock-require": "^3.0.3",
-    "nock": "^10.0.6",
+    "mocha": "^6.0.2",
+    "mock-require": "^3.0.2",
+    "nock": "^10.0.1",
     "nyc": "^14.1.1",
-    "sinon": "^7.3.2",
-    "sinon-chai": "^3.3.0"
+    "sinon": "^7.2.5",
+    "sinon-chai": "^3.0.0"
   },
   "directories": {
     "example": "examples"
